// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Org details",
      },
    }
  }
>
  <PageContents
    isLoading={true}
  />
</Page>
`;

exports[`Render should render organization and preferences 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Org details",
      },
    }
  }
>
  <PageContents
    isLoading={false}
  >
    <VerticalGroup
      spacing="lg"
    >
      <OrgProfile
        onSubmit={[Function]}
        orgName="Cool org"
      />
      <SharedPreferences
        disabled={false}
        resourceUri="org"
      />
    </VerticalGroup>
  </PageContents>
</Page>
`;
